package behavioral.strategy.Duck;

public interface FlyBehavior {
    void fly();
}
