package behavioral.strategy.Duck;

public interface QuackBehavior {
    void quack();
}
